--- a/Syriatel.ipynb
+++ b/Syriatel.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Exploration](exploration.png)\n"
+    "![Exploration](exploration.jpg)\n"
    ]
   },
   {
