--- a/Syriatel.ipynb
+++ b/Syriatel.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 49,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Introduction:"
+    "### Introduction"
    ]
   },
   {
@@ -38,12 +36,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Data Understanding:"
+    "![Exploration](Images/exploration.jpg)"
    ]
   },
   {
@@ -2246,99 +2242,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Voice Mail Plan Value Counts:\n",
-      "voice mail plan\n",
-      "False    2411\n",
-      "True      922\n",
-      "Name: count, dtype: int64\n",
-      "International Plan Value Counts:\n",
-      "international plan\n",
-      "False    3010\n",
-      "True      323\n",
-      "Name: count, dtype: int64\n",
-      "Number of duplicate rows: 0\n",
-      "Churn Value Counts:\n",
-      "churn\n",
-      "False    2850\n",
-      "True      483\n",
-      "Name: count, dtype: int64\n",
-      "       account length  number vmail messages  total day minutes  \\\n",
-      "count    3.333000e+03           3.333000e+03       3.333000e+03   \n",
-      "mean     1.470971e-16           7.035077e-17       7.312216e-16   \n",
-      "std      1.000150e+00           1.000150e+00       1.000150e+00   \n",
-      "min     -2.513172e+00          -5.917599e-01      -3.301096e+00   \n",
-      "25%     -6.797448e-01          -5.917599e-01      -6.624241e-01   \n",
-      "50%     -1.627644e-03          -5.917599e-01      -6.887677e-03   \n",
-      "75%      6.513740e-01           8.695542e-01       6.725198e-01   \n",
-      "max      3.564766e+00           3.134591e+00       3.140422e+00   \n",
-      "\n",
-      "       total day calls  total day charge  total eve minutes  total eve calls  \\\n",
-      "count     3.333000e+03      3.333000e+03       3.333000e+03     3.333000e+03   \n",
-      "mean     -1.934646e-16     -2.835349e-16      -6.821892e-17     3.288365e-16   \n",
-      "std       1.000150e+00      1.000150e+00       1.000150e+00     1.000150e+00   \n",
-      "min      -5.005247e+00     -3.301162e+00      -3.963622e+00    -5.025911e+00   \n",
-      "25%      -6.695701e-01     -6.623760e-01      -6.780300e-01    -6.583610e-01   \n",
-      "50%       2.812491e-02     -6.730063e-03       8.276141e-03    -5.738630e-03   \n",
-      "75%       6.759846e-01      6.726790e-01       6.768330e-01     6.970854e-01   \n",
-      "max       3.217588e+00      3.140803e+00       3.209066e+00     3.508382e+00   \n",
-      "\n",
-      "       total eve charge  total night minutes  total night calls  \\\n",
-      "count      3.333000e+03         3.333000e+03       3.333000e+03   \n",
-      "mean       1.385697e-16         7.887813e-17      -4.903235e-17   \n",
-      "std        1.000150e+00         1.000150e+00       1.000150e+00   \n",
-      "min       -3.963679e+00        -3.513648e+00      -3.429870e+00   \n",
-      "25%       -6.783123e-01        -6.698545e-01      -6.699340e-01   \n",
-      "50%        8.459274e-03         6.485803e-03      -5.505089e-03   \n",
-      "75%        6.766695e-01         6.808485e-01       6.589239e-01   \n",
-      "max        3.207980e+00         3.839081e+00       3.827739e+00   \n",
-      "\n",
-      "       total night charge  total intl minutes  total intl calls  \\\n",
-      "count        3.333000e+03        3.333000e+03      3.333000e+03   \n",
-      "mean        -4.370275e-17       -3.336332e-16     -8.527366e-18   \n",
-      "std          1.000150e+00        1.000150e+00      1.000150e+00   \n",
-      "min         -3.515366e+00       -3.667413e+00     -1.820289e+00   \n",
-      "25%         -6.676792e-01       -6.223690e-01     -6.011951e-01   \n",
-      "50%          4.691242e-03        2.246393e-02     -1.948306e-01   \n",
-      "75%          6.814562e-01        6.672969e-01      6.178983e-01   \n",
-      "max          3.836763e+00        3.497397e+00      6.307001e+00   \n",
-      "\n",
-      "       total intl charge  customer service calls  \n",
-      "count       3.333000e+03            3.333000e+03  \n",
-      "mean        2.728757e-16            8.527366e-18  \n",
-      "std         1.000150e+00            1.000150e+00  \n",
-      "min        -3.668210e+00           -1.188218e+00  \n",
-      "25%        -6.164341e-01           -4.279320e-01  \n",
-      "50%         2.045823e-02           -4.279320e-01  \n",
-      "75%         6.706192e-01            3.323545e-01  \n",
-      "max         3.496829e+00            5.654360e+00  \n",
-      "Data processing complete. The DataFrame is now ready for modeling.\n"
-     ]
-    }
-   ],
-   "source": [
-    "file_path = 'Datasets/Customer Churn.csv'\n",
-    "data_processor = DataProcessing(file_path)\n",
-    "data_processor.process_data()\n",
-    "\n",
-    "# Initialize and run the optimized random forest model\n",
-    "rf_model = OptimizedRandomForestModel(file_path)\n",
-    "\n",
-    "# Use the processed data from DataProcessing\n",
-    "rf_model.new_df = data_processor.new_df\n",
-    "\n",
-    "# Prepare data for modeling\n",
-    "rf_model.prepare_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 152,
    "metadata": {},
    "outputs": [
@@ -2462,8 +2365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project, I set out to predict customer churn using the \"Customer Churn\" dataset. To achieve this, I developed and evaluated four models: a baseline logistic regression model, an optimized logistic regression model, a baseline random forest model, and an optimized random forest model. Below is a detailed evaluation of each model's performance, providing insights into their effectiveness and potential areas for improvement.\n",
-    "\n",
+    "In this project, I set out to predict customer churn using the \"Customer Churn\" dataset. To achieve this, I developed and evaluated four models: a baseline logistic regression model, an optimized logistic regression model, a baseline random forest model, and an optimized random forest model. \n",
     "## Models and Their Performance\n",
     "\n",
     "### Baseline Logistic Regression Model\n",
@@ -2574,6 +2476,14 @@
    "metadata": {},
    "source": [
     "#### Recommendations:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "![Customer Churn](Images/acha%20kuchurn%20macusto.jpg)"
    ]
   },
   {
